Updated Swedish translation
2006-04-11  Daniel Nylander  <po@danielnylander.se>

        * sv.po: Updated Swedish translation

--- a/po/sv.po
+++ b/po/sv.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-11 13:53+0200\n"
-"PO-Revision-Date: 2006-04-11 21:35+0100\n"
+"PO-Revision-Date: 2006-04-11 23:32+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
@@ -462,11 +462,11 @@ msgstr "Det var inte möjligt att skriva ut ditt dokument"
 
 #: ../src/yelp-print.c:466
 msgid "Printing"
-msgstr "Utskrift"
+msgstr "Skriver ut"
 
 #: ../src/yelp-print.c:493
 msgid "<b>Printing</b>"
-msgstr "<b>Utskrift</b>"
+msgstr "<b>Skriver ut</b>"
 
 #: ../src/yelp-print.c:495
 msgid "Waiting to print"
