--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-11  Rhys Jones  <rhys@sucs.org>
+
+	* cy.po: Updated Welsh translation.
+
 2006-04-11  Daniel Nylander  <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation
