--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-12  Žygimantas Beručka  <zygis@gnome.org>
+
+	* lt.po: Updated Lithuanian translation.
+
 2006-04-12  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
