--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-13  Lukas Novotny  <lukasnov@cvs.gnome.org>
+
+ 	* cs.po: Updated Czech translation.
+
 2006-04-12  Žygimantas Beručka  <zygis@gnome.org>
 
 	* lt.po: Updated Lithuanian translation.
