--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-13  Daniel Nylander  <po@danielnylander.se>
+
+ 	* sv.po: Updated Swedish translation.
+
 2006-04-13  Lukas Novotny  <lukasnov@cvs.gnome.org>
 
  	* cs.po: Updated Czech translation.
