--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* configure.in: Remove obsolete entry for no_NO
+	* po/no.po: And the translation.
+
 2006-04-04  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-toc-pager.c: (xslt_yelp_document):
