--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+
 2006-04-17  Josep Puigdemont Casamajó  <josep.puigdemont@gmail.com>
 
 	* ca.po: Updated Catalan translation.
