Clean up configure.in a bit Fixes #337437
* configure.in: Clean up configure.in a bit Fixes #337437

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-04-19  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* configure.in: 
+	Clean up configure.in a bit
+	Fixes #337437
+
 2006-04-18  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Remove obsolete entry for no_NO
