Build with xulrunner trunk (gecko 1.9). Bug #329429.
2006-04-20  Christian Persch  <chpe@cvs.gnome.org>

	* configure.in:
	* src/Makefile.am:
	* src/yelp-gecko-utils.cpp:

	Build with xulrunner trunk (gecko 1.9). Bug #329429.

	* m4/gecko.m4:

	Re-sync with Epiphany.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2006-04-20  Christian Persch  <chpe@cvs.gnome.org>
+
+	* configure.in:
+	* src/Makefile.am:
+	* src/yelp-gecko-utils.cpp:
+
+	Build with xulrunner trunk (gecko 1.9). Bug #329429.
+
+	* m4/gecko.m4:
+
+	Re-sync with Epiphany.
+
 2006-04-19  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/Makefile.am: 
