--- a/po/et.po
+++ b/po/et.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-04-07 06:37+0200\n"
-"PO-Revision-Date: 2006-04-07 11:08+0300\n"
+"PO-Revision-Date: 2006-04-20 08:22+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -404,7 +404,7 @@ msgid ""
 "an unsupported format."
 msgstr ""
 "Faili ‘%s’ ei ole võimalik lugeda ja dekodeerida. Arvatavasti on fail "
-"toetamata vormingus või pakitud kujul."
+"pakitud toetamata vorminguga."
 
 #: ../src/yelp-main.c:98
 msgid "Define which cache directory to use"
