--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-22  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po Updated Greek Translation
+
 2006-04-21  Priit Laes  <amd@store20.com>
 
 	* et.po: Translation updated by Ivar Smolin.
