Only write a mansect element when we have a non empty linked list of
        * src/yelp-toc-pager.c: (process_mandir_pending):
        Only write a mansect element when we have a non empty linked list of
        directories

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-04-23  Brent Smith  <gnome@nextreality.net>
 
+	* src/yelp-toc-pager.c: (process_mandir_pending):
+	Only write a mansect element when we have a non empty linked list of
+	directories
+
+2006-04-23  Brent Smith  <gnome@nextreality.net>
+
 	* configure.in:
 	Don't print out whether or not beagle is available in the summary
 	since there are instances where we don't even check, i.e.
