--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-04-23  Brent Smith  <gnome@nextreality.net>
 
+	* NEWS:
+	* configure.in:
+	- Version 2.15.1
+
+2006-04-23  Brent Smith  <gnome@nextreality.net>
+
 	* src/yelp-toc-pager.c: (process_mandir_pending):
 	Only write a mansect element when we have a non empty linked list of
 	directories
