--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,52 @@
+Changes in 2.15.1:
+------------------
+* Fix for man cache logic and mansect elements              (Brent Smith)
+* If unable to stat a directory in the cache file, remove   (Brent Smith)
+* Fix a crash in process_omf_pending()                      (Brent Smith)
+* Fix a crash in create_toc_from_omf_cache_file()           (Brent Smith)
+* Build with xulrunner trunk (gecko 1.9). Bug #329429.      (Christian Persch)
+* Re-sync gecko.m4 with epiphany                            (Christian Persch)
+* Clean up configure.in a bit, fixes #337437                (Don Scorgie)
+* Change font size for all locales, fixes #165678           (Christian Persch)
+* Remove obsolete entry for no_NO and translation           (Kjartan Maraas)
+* Add "Contents" entry to the Help menu                     (Brent Smith)
+* fix "About this Document" sensitivity                     (Brent Smith)
+* Strip leading/trailing spaces from search terms, #334568  (Don Scorgie)
+* Add 3perl to the Perl Functions section                   (Brent Smith)
+* various beagle signal and refcount fixes, #334938         (Joe Shaw)
+* Cache information from OMF files, see bug #336699.        (Brent Smith)
+* Move to goption, bug #335874                              (Don Scorgie)
+* fix some memory leaks in TOC info pager                   (Robert Harris)
+* Display a header on the search results, #334923           (Brent Smith)
+* Don't free an object's private data                       (Brent Smith)
+* Keep track of timeout and remove when not needed, #335306 (Don Scorgie)
+* Updated translations:
+Vladimir Petkov (bg)
+Khandakar Mujahidul Islam (bn)
+Jérémy Le Floc'h (br)
+Jordi Mallach (ca)
+Lukas Novotny (cs)
+Rhys Jones (cy)
+Ivar Smolin (et)
+Ilkka Tuohela (fi)
+Laurent Richard (fr)
+Ignacio Casal Quinteiro (gl)
+Ankit Patel (gu)
+Rajesh Ranjan (hi)
+Vladimer Sichinava (ka)
+Žygimantas Beručka (lt)
+Åsmund Skjæveland (nn)
+Gora Mohanty (or)
+Bartosz Kosiorek (pl)
+Leandro A. F. Pereira (pt_BR)
+Mugurel Tudor (ro)
+Leonid Kanter (ru)
+Daniel Nylander (sv)
+Serkan Kenar (tr)
+Maxim Dzumanenko (uk)
+Clytie Siddall (vi)
+Funda Wang (zh_CN)
+
 Changes in 2.14.0:
 ------------------
 * Sort search results to provide some sanity                 (Don Scorgie)
