--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-24  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2006-04-21  Priit Laes  <amd@store20.com>
 
 	* et.po: Translation updated by Ivar Smolin.
