--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2006-04-27  Brian Pepple  <bdpepple@gmail.com>
+
+	* po/LINGUAS: New file listing all supported languages.
+	* configure.in: Use po/LINGUAS instead of including all languages
+	directly in this file. See the wiki for more information:
+	http://live.gnome.org/GnomeGoals/PoLinguas
+
+==================== 2.15.1 ====================
+
 2006-04-23  Brent Smith  <gnome@nextreality.net>
 
 	* NEWS:
