--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-04-29  Priit Laes  <amd@store20.com>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2006-04-26  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation
