Move all find code into a single function reducing lots of duplicate code
* src/yelp-window.c:
Move all find code into a single function reducing
lots of duplicate code

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-11  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-window.c: 
+	Move all find code into a single function reducing
+	lots of duplicate code
+
 2006-04-27  Brian Pepple  <bdpepple@gmail.com>
 
 	* po/LINGUAS: New file listing all supported languages.
