--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,12 @@
 2006-05-11  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-info-parser.c: 
+	If the node isn't found while parsing, adjust the offset and
+	try again (stupid broken info page workaround) bug #336838
+	
+	* src/yelp-info-parser.c: 
 	Actually check a directory exists before reading it (bug #339978)
-
+	
 	* stylesheets/search2html.xsl: 
 	* src/yelp-window.c: 
 	* src/yelp-search-pager.c: 
