--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-15  Brent Smith  <gnome@nextreality.net>
+
+	* data/yelp.schemas.in: fix the applyto element for the use_caret
+	gconf key
+
 2006-05-11  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-man-parser.c: (macro_reference_handler):
