--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-16  Benoît Dejean  <benoit@placenet.org>
+
+	* fr.po: Updated French translation.
+
 2006-05-12  Ahmad Riza H Nst  <rizahnst@eriagempita.co.id>
 
 	* id.po: Updated.
