--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-05-17  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-info-parser.c:
+	Reduce strictness of searching for menus in info pages (stupid info 
+	page workaround #2)
+
 2006-05-15  Brent Smith  <gnome@nextreality.net>
 
 	* NEWS:
