Update intltool requirement to 0.35.0
	* configure.in: Update intltool requirement to 0.35.0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,14 @@
+2006-05-21  Brent Smith  <gnome@nextreality.net>
+
+	* configure.in: Update intltool requirement to 0.35.0
+
 2006-05-17  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-info-parser.c:
 	Reduce strictness of searching for menus in info pages (stupid info 
 	page workaround #2)
+
+==================== 2.15.2 ====================
 
 2006-05-15  Brent Smith  <gnome@nextreality.net>
 
