--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-25  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated.
+
 2006-05-16  Benoît Dejean  <benoit@placenet.org>
 
 	* fr.po: Updated French translation.
