--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2006-05-26  Brent Smith  <gnome@nextreality.net>
+
+	* src/yelp-man-parser.c: (parser_append_given_text_handle_escapes):
+	don't increment ptr, fixes #341827 - Don Scorgie
+	* src/yelp-search-pager.c:
+	get rid of pointless YelpListing type
+	* src/yelp-toc-pager.c: (process_mandir_pending),
+	(process_cleanup), (xslt_yelp_document):
+	Need to allocate memory for encoding b/c xmlFreeDoc tries to free
+	this
+	cleanup the man_secthash hash table when finished
+
 2006-05-26  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-toc-pager.c:
