--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-05-28  Pema Geyleg  <pema.geyleg@gmail.com>
+
+	* dz.po: Updated Dzongkha translation.
+
 2006-05-24  Inaki Larranaga  <doteo@euskalgnu.org>
 
 	* eu.po: Updated Basque translation.
