Fix loading of info pages from subdirs in some cases
* src/yelp-utils.c:
Fix loading of info pages from subdirs in some cases

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2006-05-29  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* src/yelp-utils.c: 
+	Fix loading of info pages from subdirs in some cases
+	
 	* src/gtkentryaction.c: 
 	Free text after use
 
