--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,45 @@
+Changes in 2.14.2:
+------------------
+* fix the applyto element for the use_caret gconf key        (Brent Smith)
+* Workaround for manual page inclusion, fixes #340173        (Brent Smith)
+* Fix for man cache logic and mansect elements               (Brent Smith)
+* Updated translations:
+Ales Nyakhaychyk (be)
+Vladimir Petkov (bg)
+Khandakar Mujahidul Islam (bn)
+Jérémy Le Floc'h (br)
+Jordi Mallach (ca)
+Lukas Novotny (cs)
+Rhys Jones (cy)
+Hendrik Richter (de)
+Mindu Dorji (dz)
+Nikos Charonitakis (el)
+Francisco Javier F. Serrador (es)
+Ivar Smolin (et)
+Iñaki Larrañaga Murgoitio (eu)
+Ilkka Tuohela (fi)
+Robert-André Mauchin (fr)
+Ignacio Casal Quinteiro (gl)
+Ankit Patel (gu)
+Gabor Kelemen (hu)
+Ahmad Riza H Nst (id)
+Luca Ferretti (it)
+Takeshi AIHANA (ja)
+Žygimantas Beručka (lt)
+Kjartan Maraas (nb)
+Tino Meinen (nl)
+Åsmund Skjæveland (nn)
+Gora Mohanty (or)
+Bartosz Kosiorek (pl)
+Laurent Dhima (sq)
+Daniel Nylander (sv)
+Theppitak Karoonboonyanan (th)
+Serkan Kenar (tr)
+Clytie Siddall (vi)
+Funda Wang (zh_CN)
+Woodman Tuen (zh_HK)
+Woodman Tuen (zh_TW)
+
 Changes in 2.14.1:
 ------------------
 * Add "Contents" entry to the Help menu                      (Brent Smith)
