--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-05-29  Brent Smith  <gnome@nextreality.net>
 
+	* NEWS:
+	* configure.in:
+	- Version 2.14.2
+
+2006-05-29  Brent Smith  <gnome@nextreality.net>
+
 	* data/yelp.schemas.in: fix the applyto element for the use_caret
 	gconf key
 	* src/yelp-man-parser.c: (macro_reference_handler),
