--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-30  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+        * src/yelp-toc-pager.c:
+        Escape & characters when encountered in info processing (fixes #343372)
+
 2006-05-29  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-toc-pager.c: (process_mandir_pending):
