--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-06  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-gecko-utils.cpp: 
+	Make monospace fonts change size when asked (bug #344003)
+
 2006-05-30  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-utils.c: 
