--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-06-10  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* src/yelp-window.c: 
+	* data/ui/yelp-ui.xml: 
+	Add a deep history framework (bug #67966)
+	
 	* stylesheets/info2html.xsl: 
 	* src/yelp-info-parser.c: 
 	Make *Notes into hyperlinks (bug #343524)
