Fix search entry to be on correct toolbar
* data/ui/yelp-search-ui.xml:
Fix search entry to be on correct toolbar

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2006-06-10  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* data/ui/yelp-search-ui.xml: 
+	Fix search entry to be on correct toolbar
+	
 	* src/yelp-window.c: 
 	* data/ui/yelp-ui.xml: 
 	Add a deep history framework (bug #67966)
