--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-10  Jakub Friedl  <jfriedl@suse.cz>
+
+	* cs.po: Updated Czech translation.
+
 2006-06-06  Pablo Saratxaga  <pablo@mandriva.com>
 
 	* wa.po: updated Walloon file.
