--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-11  Priit Laes  <amd@store20.com>
+
+	* et.po: Translation updated.
+
 2006-06-10  Jakub Friedl  <jfriedl@suse.cz>
 
 	* cs.po: Updated Czech translation.
