--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2006-06-11  Don Scorgie  <dscorgie@cvs.gnome.org>
 
+	* data/toc.xml.in: 
+	Change 'Multimedia' category to 'Sound & Vision' for consistancy 
+	(bug #332182)
+
 	* src/yelp-window.c: 
 	Don't auto-expand sections in left pane (bug #167070)
 
