--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2006-06-11  Brent Smith  <gnome@nextreality.net>
+
+	* src/yelp-man-pager.c: (man_pager_parse):
+	* src/yelp-man-parser.c: (yelp_man_parser_parse_file),
+	(yelp_man_parser_parse_doc), (parser_parse_line),
+	(macro_ignore_handler), (macro_section_header_handler),
+	(parser_handle_linetag), (parser_read_until), (parser_append_text):
+	* src/yelp-man-parser.h:
+	* src/yelp-toc-pager.c: (add_man_page_to_toc),
+	(create_toc_from_index), (process_mandir_pending),
+	(process_cleanup):
+	* stylesheets/man2html.xsl:
+	Add support for translated man pages, fixes #343275
+
 2006-06-11  Don Scorgie  <dscorgie@cvs.gnome.org>
 
 	* src/yelp-main.c: 
