--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-11  Christian Rose  <menthos@menthos.com>
+
+	* lv.po: Updated Latvian translation by
+	Raivis Dejus <orvils@gmail.com>.
+
 2006-05-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
