--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+==================== 2.15.3 ====================
+
+2006-06-11  Brent Smith  <gnome@nextreality.net>
+
+	* NEWS:
+	* configure.in:
+	- Version 2.15.3
+
 2006-06-11  Brent Smith  <gnome@nextreality.net>
 
 	* po/POTFILES.in:
