--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-12  Jakub Friedl  <jfriedl@suse.cz>
+
+	* cs.po: Updated Czech Translation.
+
 2006-06-12  Ankit Patel  <ankit644@yahoo.com>
 
 	* gu.po: Updated Gujarati Translation.
