--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-06-13  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-info-parser.c: 
+	Don't crash on certian *Note types
+	Fix other *Note types to actually pick correct section for url
+	Fixes bug #344730
+	
 ==================== 2.15.3 ====================
 
 2006-06-11  Brent Smith  <gnome@nextreality.net>
