--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-13  Priit Laes  <amd@store20.com>
+
+	* et.po: Translation updated.
+
 2006-06-12  Francisco Javier F. Serrador  <serrador@openshine.com>
 
 	* es.po: Updated Spanish translation.
