Updated German translation.
2006-06-15  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation.

--- a/po/de.po
+++ b/po/de.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-05-04 13:37+0200\n"
-"PO-Revision-Date: 2006-05-04 13:40+0200\n"
+"PO-Revision-Date: 2006-06-15 17:42+0200\n"
 "Last-Translator: Hendrik Richter <hendrikr@gnome.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -648,7 +648,7 @@ msgstr "_Alles auswählen"
 
 #: ../src/yelp-window.c:359
 msgid "_Find..."
-msgstr "_Suchen..."
+msgstr "_Suchen …"
 
 #: ../src/yelp-window.c:364
 msgid "Find Pre_vious"
@@ -832,7 +832,7 @@ msgstr ""
 
 #: ../src/yelp-window.c:1519
 msgid "Loading..."
-msgstr "Ladevorgang..."
+msgstr "Ladevorgang …"
 
 #: ../src/yelp-window.c:2665
 #, c-format
@@ -894,3 +894,6 @@ msgstr "Hilfe zu GNOME holen"
 
 #~ msgid "Unknown Section"
 #~ msgstr "Unbekannter Abschnitt"
+
+
+
