--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-17  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-toc-pager.c:
+	- Use xmlNewTextChild so ampersands don't screw us up
+
 2006-05-29  Brent Smith  <gnome@nextreality.net>
 
 	* NEWS:
