--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-21  Shaun McCance  <shaunm@gnome.org>
+
+	* src/GNOME_Yelp.server.in:
+	- Nuking from CVS, since were on DBUS now
+
 2006-06-17  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-toc-pager.c:
