--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-06-22  Christian Persch  <chpe@cvs.gnome.org>
+
+	* m4/gecko.m4:
+
+	Fix 'unknown gecko' error output. (Synched from Epiphany).
+
 2006-06-21  Shaun McCance  <shaunm@gnome.org>
 
 	* src/GNOME_Yelp.server.in:
