--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-23  I. Felix  <ifelix25@gmail.com>
+
+	* ta.po: Updated Tamil translation.
+
 2006-06-16  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
