--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-26  Rajesh Ranjan <rajeshkajha@yahoo.com>
+
+        * hi.po: Updated Hindi Translation.
+
 2006-06-23  I. Felix  <ifelix25@gmail.com>
 
 	* ta.po: Updated Tamil translation.
