--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-06-27  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2006-06-26  Rajesh Ranjan <rajeshkajha@yahoo.com>
 
         * hi.po: Updated Hindi Translation.
