--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-06-29  Guntupalli Karunakar  <karunakar@indlinux.org>
+
+        * dz.po: Updated Dzongkha translation
+        by Dzongkhalinux, DIT
+
 2006-06-27  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
