Fixed 'kết thức'

--- a/po/vi.po
+++ b/po/vi.po
@@ -496,7 +496,7 @@ msgstr "_Đến:"
 
 #:../src/yelp-print.c:587
 msgid "Sets the end of the range of pages to be printed"
-msgstr "Lập kết thức của phạm vị các trang cần in"
+msgstr "Lập kết thúc của phạm vị các trang cần in"
 
 #:../src/yelp-search-pager.c:696
 #,c-format
