--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,28 @@
 2006-07-03  Brent Smith  <gnome@nextreality.net>
 
+	* src/yelp-document.c: (yelp_document_dispose),
+	(yelp_document_finalize), (yelp_document_class_init),
+	(yelp_document_init), (document_set_property),
+	(document_get_property), (yelp_document_get_page),
+	(yelp_document_cancel_get), (yelp_document_get_sections),
+	(yelp_document_add_page):
+	* src/yelp-document.h:
+	* src/yelp-page.c: (yelp_page_new), (yelp_page_set_id),
+	(yelp_page_get_id), (yelp_page_set_title), (yelp_page_get_title),
+	(yelp_page_set_contents), (yelp_page_get_contents),
+	(yelp_page_set_prev_id), (yelp_page_get_prev_id),
+	(yelp_page_set_next_id), (yelp_page_get_next_id),
+	(yelp_page_set_toc_id), (yelp_page_get_toc_id), (yelp_page_free):
+	* src/yelp-page.h:
+	- Add these to the correct directory
+	* yelp-document.c:
+	* yelp-document.h:
+	* yelp-page.c:
+	* yelp-page.h:
+	- Remove these (I put them in the wrong directory in the last commit)
+
+2006-07-03  Brent Smith  <gnome@nextreality.net>
+
 	* src/yelp-debug.h: Put an #ifdef around HAVE_CONFIG_H
 	* src/yelp-utils.c:
 	* src/yelp-utils.h:
