--- a/po/vi.po
+++ b/po/vi.po
@@ -488,7 +488,7 @@ msgstr "_Từ :"
 
 #:../src/yelp-print.c:572
 msgid "Sets the start of the range of pages to be printed"
-msgstr "Lập đầu của phạm vị các trang cần in"
+msgstr "Lập đầu của phạm vi các trang cần in"
 
 #:../src/yelp-print.c:574
 msgid "_To:"
@@ -496,7 +496,7 @@ msgstr "_Đến:"
 
 #:../src/yelp-print.c:587
 msgid "Sets the end of the range of pages to be printed"
-msgstr "Lập kết thúc của phạm vị các trang cần in"
+msgstr "Lập kết thúc của phạm vi các trang cần in"
 
 #:../src/yelp-search-pager.c:696
 #,c-format
