Expand sections on double-click (bug #346871)
* src/yelp-window.c:
Expand sections on double-click (bug #346871)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-07-07  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+	* src/yelp-window.c: 
+	Expand sections on double-click (bug #346871)
+
 2006-07-01  Brent Smith  <gnome@nextreality.net>
 
 	* src/yelp-toc-pager.c: (process_info_pending): Fix to properly escape
