--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-07-10  Brent Smith  <gnome@nextreality.net>
 
+	* NEWS:
+	* configure.in:
+	- Version 2.15.4
+
+2006-07-10  Brent Smith  <gnome@nextreality.net>
+
 	* data/info.xml.in:
 	* data/man.xml.in:
 	* data/scrollkeeper.xml:
