--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2006-07-11  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
