Fixed "Đa vật chứa"

--- a/po/vi.po
+++ b/po/vi.po
@@ -163,7 +163,7 @@ msgstr "KDE"
 
 #:../data/toc.xml.in.h:12
 msgid "Multimedia"
-msgstr "Đa vật chứa"
+msgstr "Đa phương tiện"
 
 #:../data/toc.xml.in.h:13
 msgid "Office"
