--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-07-19  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation.
+
 2006-07-18  Guntupalli Karunakar  <karunakar@freedomink.org>
 
         * dz.po: Updated Dzongkha translation by
