--- a/po/ko.po
+++ b/po/ko.po
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp 2.15.3\n"
+"Project-Id-Version: yelp 2.15.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-07-08 09:36+0900\n"
-"PO-Revision-Date: 2006-07-08 09:39+0900\n"
+"POT-Creation-Date: 2006-07-19 21:49+0900\n"
+"PO-Revision-Date: 2006-07-19 21:57+0900\n"
 "Last-Translator: Changwoo Ryu <cwryu@debian.org>\n"
 "Language-Team: GNOME Korea <gnome-kr-hackers@lists.kldp.net>\n"
 "MIME-Version: 1.0\n"
@@ -15,111 +15,267 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
-#: ../data/info.xml.in.h:1 ../src/yelp-toc-pager.c:1709
+#: ../data/info.xml.in.h:1 ../src/yelp-toc-pager.c:1836
 msgid "GNU Info Pages"
 msgstr "GNU 정보 페이지"
 
-#: ../data/man.xml.in.h:1 ../data/toc.xml.in.h:4
+#: ../data/info.xml.in.h:2
+msgid "Traditional command line help (info)"
+msgstr "전통적인 명령행 도움말 (info)"
+
+#: ../data/man.xml.in.h:1
 msgid "Applications"
 msgstr "응용프로그램"
 
 #: ../data/man.xml.in.h:2
+msgid "BLT Functions"
+msgstr "BLT 함수"
+
+#: ../data/man.xml.in.h:3
 msgid "Configuration Files"
 msgstr "설정 파일"
 
-#: ../data/man.xml.in.h:3
+#: ../data/man.xml.in.h:4
+msgid "Curses Functions"
+msgstr "curses 함수"
+
+#: ../data/man.xml.in.h:5
 msgid "Development"
 msgstr "개발"
 
-#: ../data/man.xml.in.h:4
+#: ../data/man.xml.in.h:6
 msgid "FORTRAN Functions"
-msgstr "FORTRAN 함수"
+msgstr "포트란 함수"
 
-#: ../data/man.xml.in.h:5 ../data/toc.xml.in.h:7
+#: ../data/man.xml.in.h:7 ../data/toc.xml.in.h:15
 msgid "Games"
 msgstr "게임"
 
-#: ../data/man.xml.in.h:6
+#: ../data/man.xml.in.h:8
 msgid "Hardware Devices"
 msgstr "하드웨어 장치"
 
-#: ../data/man.xml.in.h:7
+#: ../data/man.xml.in.h:9
 msgid "Kernel Routines"
 msgstr "커널 루틴"
 
-#: ../data/man.xml.in.h:8
-msgid "Library Functions"
-msgstr "라이브러리 함수"
-
-#: ../data/man.xml.in.h:9 ../src/yelp-toc-pager.c:1703
+#: ../data/man.xml.in.h:10 ../src/yelp-toc-pager.c:1830
 msgid "Manual Pages"
 msgstr "설명서 페이지"
 
-#: ../data/man.xml.in.h:10
+#: ../data/man.xml.in.h:11
+msgid "Network Audio Sound Functions"
+msgstr "네트워크 오디오 사운드 함수"
+
+#: ../data/man.xml.in.h:12
 msgid "OpenSSL Applications"
 msgstr "OpenSSL 프로그램"
 
-#: ../data/man.xml.in.h:11
+#: ../data/man.xml.in.h:13
 msgid "OpenSSL Configuration"
 msgstr "OpenSSL 설정"
 
-#: ../data/man.xml.in.h:12
+#: ../data/man.xml.in.h:14
+msgid "OpenSSL Functions"
+msgstr "OpenSSL 함수"
+
+#: ../data/man.xml.in.h:15
 msgid "OpenSSL Overviews"
 msgstr "OpenSSL 전체"
 
-#: ../data/man.xml.in.h:13
+#: ../data/man.xml.in.h:16
 msgid "Overviews"
 msgstr "전체"
 
-#: ../data/man.xml.in.h:14
+#: ../data/man.xml.in.h:17
 msgid "POSIX Functions"
 msgstr "POSIX 함수"
 
-#: ../data/man.xml.in.h:15
+#: ../data/man.xml.in.h:18
 msgid "POSIX Headers"
 msgstr "POSIX 헤더"
 
-#: ../data/man.xml.in.h:16
+#: ../data/man.xml.in.h:19
 msgid "Perl Functions"
 msgstr "Perl 함수"
 
-#: ../data/man.xml.in.h:17
+#: ../data/man.xml.in.h:20
 msgid "Qt Functions"
 msgstr "Qt 함수"
 
-#: ../data/man.xml.in.h:18
+#: ../data/man.xml.in.h:21
+msgid "Readline Functions"
+msgstr "readline 함수"
+
+#: ../data/man.xml.in.h:22
+msgid "Section 0p"
+msgstr "섹션 0p"
+
+#: ../data/man.xml.in.h:23
+msgid "Section 1m"
+msgstr "섹션 1m"
+
+#: ../data/man.xml.in.h:24
+msgid "Section 1ssl"
+msgstr "섹션 1ssl"
+
+#: ../data/man.xml.in.h:25
+msgid "Section 1x"
+msgstr "섹션 1x"
+
+#: ../data/man.xml.in.h:26
+msgid "Section 2"
+msgstr "섹션 2"
+
+#: ../data/man.xml.in.h:27
+msgid "Section 3blt"
+msgstr "섹션 3blt"
+
+#: ../data/man.xml.in.h:28
+msgid "Section 3f"
+msgstr "섹션 3f"
+
+#: ../data/man.xml.in.h:29
+msgid "Section 3nas"
+msgstr "섹션 3nas"
+
+#: ../data/man.xml.in.h:30
+msgid "Section 3p"
+msgstr "섹션 3p"
+
+#: ../data/man.xml.in.h:31
+msgid "Section 3qt"
+msgstr "섹션 3qt"
+
+#: ../data/man.xml.in.h:32
+msgid "Section 3readline"
+msgstr "섹션 3readline"
+
+#: ../data/man.xml.in.h:33
+msgid "Section 3ssl"
+msgstr "섹션 3ssl"
+
+#: ../data/man.xml.in.h:34
+msgid "Section 3tiff"
+msgstr "섹션 3tiff"
+
+#: ../data/man.xml.in.h:35
+msgid "Section 4"
+msgstr "섹션 4"
+
+#: ../data/man.xml.in.h:36
+msgid "Section 4x"
+msgstr "섹션 4x"
+
+#: ../data/man.xml.in.h:37
+msgid "Section 5"
+msgstr "섹션 5"
+
+#: ../data/man.xml.in.h:38
+msgid "Section 5ssl"
+msgstr "섹션 5ssl"
+
+#: ../data/man.xml.in.h:39
+msgid "Section 5x"
+msgstr "섹션 5x"
+
+#: ../data/man.xml.in.h:40
+msgid "Section 6"
+msgstr "섹션 6"
+
+#: ../data/man.xml.in.h:41
+msgid "Section 6x"
+msgstr "섹션 6x"
+
+#: ../data/man.xml.in.h:42
+msgid "Section 7ssl"
+msgstr "섹션 7ssl"
+
+#: ../data/man.xml.in.h:43
+msgid "Section 7x"
+msgstr "섹션 7x"
+
+#: ../data/man.xml.in.h:44
+msgid "Section 9"
+msgstr "섹션 9"
+
+#: ../data/man.xml.in.h:45
+msgid "Sections 1, 1p, 1g and 1t"
+msgstr "섹션 1, 1p, 1g 및 1t"
+
+#: ../data/man.xml.in.h:46
+msgid "Sections 3, 3o, and 3t"
+msgstr "섹션 3, 3o 및 3t"
+
+#: ../data/man.xml.in.h:47
+msgid "Sections 3form and 3menu"
+msgstr "섹션 3form 및 3menu"
+
+#: ../data/man.xml.in.h:48
+msgid "Sections 3ncurses and 3curses"
+msgstr "섹션 3ncurses 및 3curses"
+
+#: ../data/man.xml.in.h:49
+msgid "Sections 3pm and 3perl"
+msgstr "섹션 3pm 및 3perl"
+
+#: ../data/man.xml.in.h:50
+msgid "Sections 3x and 3X11"
+msgstr "섹션 3x 및 3X11"
+
+#: ../data/man.xml.in.h:51
+msgid "Sections 7 and 7gcc"
+msgstr "섹션 7 및 7gcc"
+
+#: ../data/man.xml.in.h:52
+msgid "Sections 8 and 8l"
+msgstr "섹션 8 및 8l"
+
+#: ../data/man.xml.in.h:53
 msgid "System Administration"
 msgstr "시스템 관리"
 
-#: ../data/man.xml.in.h:19
+#: ../data/man.xml.in.h:54
 msgid "System Calls"
 msgstr "시스템 호출"
 
-#: ../data/man.xml.in.h:20
+#: ../data/man.xml.in.h:55
+msgid "System V Form/Menu Functions"
+msgstr "시스템 V 폼/메뉴 함수"
+
+#: ../data/man.xml.in.h:56
+msgid "TIFF Functions"
+msgstr "TIFF 함수"
+
+#: ../data/man.xml.in.h:57
 msgid "Termcap Applications"
 msgstr "Termcap 프로그램"
 
-#: ../data/man.xml.in.h:21
+#: ../data/man.xml.in.h:58
+msgid "Traditional command line help (man)"
+msgstr "전통적인 명령행 도움말 (맨페이지)"
+
+#: ../data/man.xml.in.h:59
 msgid "X11 Applications"
 msgstr "X11 프로그램"
 
-#: ../data/man.xml.in.h:22
+#: ../data/man.xml.in.h:60
 msgid "X11 Configuration"
 msgstr "X11 설정"
 
-#: ../data/man.xml.in.h:23
+#: ../data/man.xml.in.h:61
 msgid "X11 Devices"
 msgstr "X11 장치"
 
-#: ../data/man.xml.in.h:24
+#: ../data/man.xml.in.h:62
 msgid "X11 Functions"
 msgstr "X11 함수"
 
-#: ../data/man.xml.in.h:25
+#: ../data/man.xml.in.h:63
 msgid "X11 Games"
 msgstr "X11 게임"
 
-#: ../data/man.xml.in.h:26
+#: ../data/man.xml.in.h:64
 msgid "X11 Overviews"
 msgstr "X11 전체"
 
@@ -132,70 +288,126 @@ msgid "Accessories"
 msgstr "보조 프로그램"
 
 #: ../data/toc.xml.in.h:3
-msgid "Administration"
-msgstr "시스템 관리"
+msgid "Applications for fun"
+msgstr "재미를 위한 응용프로그램"
+
+#: ../data/toc.xml.in.h:4
+msgid "Applications for manipulating or viewing graphics"
+msgstr "그래픽을 보거나 조작하는 응용프로그램"
 
 #: ../data/toc.xml.in.h:5
+msgid "Applications for word processing and other office tasks"
+msgstr "워드프로세스 및 기타 업무용 응용프로그램"
+
+#: ../data/toc.xml.in.h:6
+msgid "Applications related to X Windows"
+msgstr "X Window 관련 응용프로그램"
+
+#: ../data/toc.xml.in.h:7
+msgid "Applications related to multimedia"
+msgstr "멀티미디어 관련 응용프로그램"
+
+#: ../data/toc.xml.in.h:8
+msgid "Applications related to software development"
+msgstr "소프트웨어 개발 관련 응용프로그램"
+
+#: ../data/toc.xml.in.h:9
+msgid "Applications related to the internet"
+msgstr "인터넷 관련 응용프로그램"
+
+#: ../data/toc.xml.in.h:10
+msgid "Applications specific to the panel"
+msgstr "패널 관련 응용프로그램"
+
+#: ../data/toc.xml.in.h:11
+msgid "Applications that support assistive technologies"
+msgstr "접근성 기술을 지원하는 응용프로그램"
+
+#: ../data/toc.xml.in.h:12
 msgid "Desktop"
 msgstr "데스크탑"
 
-#: ../data/toc.xml.in.h:6
-msgid "Education Applications"
-msgstr "교육용 프로그램"
+#: ../data/toc.xml.in.h:13
+msgid "Documents specific to the KDE Desktop Environment"
+msgstr "KDE 데스크탑 환경 전용 문서"
 
-#: ../data/toc.xml.in.h:8
+#: ../data/toc.xml.in.h:14
+msgid "Education"
+msgstr "교육"
+
+#: ../data/toc.xml.in.h:16
 msgid "Graphics"
 msgstr "그래픽스"
 
-#: ../data/toc.xml.in.h:9 ../src/yelp-bookmarks.c:405
-msgid "Help Topics"
-msgstr "도움말 주제"
-
-#: ../data/toc.xml.in.h:10
+#: ../data/toc.xml.in.h:17
 msgid "Internet"
 msgstr "인터넷"
 
-#: ../data/toc.xml.in.h:11
+#: ../data/toc.xml.in.h:18
 msgid "KDE"
 msgstr "KDE"
 
-#: ../data/toc.xml.in.h:12
+#: ../data/toc.xml.in.h:19
+msgid "Learning applications"
+msgstr "학습 프로그램"
+
+#: ../data/toc.xml.in.h:20
+msgid "Miscellaneous documents"
+msgstr "잡다한 문서"
+
+#: ../data/toc.xml.in.h:21
 msgid "Office"
 msgstr "사무용"
 
-#: ../data/toc.xml.in.h:13
-msgid "Other"
-msgstr "기타"
+#: ../data/toc.xml.in.h:22
+msgid "Other Applications"
+msgstr "기타 응용프로그램"
 
-#: ../data/toc.xml.in.h:14
+#: ../data/toc.xml.in.h:23
 msgid "Other Documentation"
 msgstr "기타 문서"
 
-#: ../data/toc.xml.in.h:15
+#: ../data/toc.xml.in.h:24
 msgid "Panel Applets"
 msgstr "패널 애플릿"
 
-#: ../data/toc.xml.in.h:16 ../data/ui/yelp.glade.h:8
-msgid "Preferences"
-msgstr "기본 설정"
-
-#: ../data/toc.xml.in.h:17
+#: ../data/toc.xml.in.h:25
 msgid "Programming"
 msgstr "프로그래밍"
 
-#: ../data/toc.xml.in.h:18
+#: ../data/toc.xml.in.h:26
 msgid "Scientific"
 msgstr "과학 프로그램"
 
-#: ../data/toc.xml.in.h:19
+#: ../data/toc.xml.in.h:27
+msgid "Scientific Applications."
+msgstr "과학 응용프로그램."
+
+#: ../data/toc.xml.in.h:28
 msgid "Sound &amp; Vision"
 msgstr "사운드 &amp; 비젼"
 
-#: ../data/toc.xml.in.h:20
+#: ../data/toc.xml.in.h:29
 msgid "System Tools"
 msgstr "시스템 도구"
 
-#: ../data/toc.xml.in.h:21
+#: ../data/toc.xml.in.h:30
+msgid "Utilities to manage your computer"
+msgstr "컴퓨터를 관리하는 유틸리티"
+
+#: ../data/toc.xml.in.h:31
+msgid "Utility applications"
+msgstr "유틸리티 응용프로그램"
+
+#: ../data/toc.xml.in.h:32
+msgid "Variety of other applications"
+msgstr "여러가지 기타 응용프로그램"
+
+#: ../data/toc.xml.in.h:33
+msgid "Welcome to the GNOME Help Browser"
+msgstr "그놈 도움말 브라우저입니다"
+
+#: ../data/toc.xml.in.h:34
 msgid "X Applications"
 msgstr "X 프로그램"
 
@@ -226,6 +438,10 @@ msgstr "찾기"
 #: ../data/ui/yelp.glade.h:7
 msgid "Open Location"
 msgstr "위치 열기"
+
+#: ../data/ui/yelp.glade.h:8
+msgid "Preferences"
+msgstr "기본 설정"
 
 #: ../data/ui/yelp.glade.h:9
 msgid "Re_name"
@@ -328,6 +544,10 @@ msgstr "이 페이지는 이름이 %s인 책갈피가 이미 있습니다."
 #, c-format
 msgid "A bookmark titled <b>%s</b> already exists for this page."
 msgstr "이 페이지는 이름이 <b>%s</b>인 책갈피가 이미 있습니다."
+
+#: ../src/yelp-bookmarks.c:405
+msgid "Help Topics"
+msgstr "도움말 주제"
 
 #: ../src/yelp-bookmarks.c:420
 msgid "Document Sections"
@@ -502,28 +722,29 @@ msgstr "\"%s\"에 대한 결과가 없습니다"
 msgid ""
 "Try using different words to describe the problem you're having or the topic "
 "you want help with."
-msgstr "문제가 되는 사항이나 도움이 필요한 주제에 대해 다른 단어를 사용해 보십시오."
+msgstr ""
+"문제가 되는 사항이나 도움이 필요한 주제에 대해 다른 단어를 사용해 보십시오."
 
 #: ../src/yelp-search-pager.c:740
 #, c-format
 msgid "Search results for \"%s\""
 msgstr "\"%s\"에 대한 찾기 결과"
 
-#: ../src/yelp-search-pager.c:810 ../src/yelp-toc-pager.c:2000
+#: ../src/yelp-search-pager.c:810 ../src/yelp-toc-pager.c:2130
 #: ../src/yelp-xslt-pager.c:364
 msgid "No href attribute found on yelp:document"
 msgstr "yelp:document에 href 속성이 없습니다"
 
-#: ../src/yelp-search-pager.c:824 ../src/yelp-toc-pager.c:2013
+#: ../src/yelp-search-pager.c:824 ../src/yelp-toc-pager.c:2143
 #: ../src/yelp-xslt-pager.c:380 ../src/yelp-xslt-pager.c:531
 msgid "Out of memory"
 msgstr "메모리가 부족합니다"
 
-#: ../src/yelp-search-pager.c:865 ../src/yelp-toc-pager.c:2062
+#: ../src/yelp-search-pager.c:865 ../src/yelp-toc-pager.c:2192
 msgid "Help Contents"
 msgstr "도움말 차례"
 
-#: ../src/yelp-search-pager.c:1167 ../src/yelp-toc-pager.c:514
+#: ../src/yelp-search-pager.c:1167 ../src/yelp-toc-pager.c:619
 #, c-format
 msgid "Could not load the OMF file '%s'."
 msgstr "'%s' OMF 파일을 읽어들일 수 없습니다."
@@ -553,33 +774,11 @@ msgstr "'%s' OMF 파일을 읽어들일 수 없습니다."
 msgid "yelp-watermark-blockquote-201C"
 msgstr "yelp-watermark-blockquote-201C"
 
-#: ../src/yelp-toc-pager.c:262
+#: ../src/yelp-toc-pager.c:264
 msgid "YelpTocPager: Pause count is negative."
 msgstr "YelpTocPager: 쉬기 회수가 음수입니다."
 
-#: ../src/yelp-toc-pager.c:993
-#, c-format
-msgid "Read man page for %s"
-msgstr "%s에 관한 man 페이지를 읽습니다"
-
-#: ../src/yelp-toc-pager.c:1569
-#, c-format
-msgid "Read info page for %s"
-msgstr "%s에 관한 정보 페이지를 읽습니다"
-
-#: ../src/yelp-toc-pager.c:1676
-#, c-format
-msgid ""
-"The table of contents could not be loaded. The file ‘%s’ is either missing "
-"or is not well-formed XML."
-msgstr ""
-"차례를 읽어들일 수 없습니다. '%s' 파일이 없거나 올바른 형식의 XML이 아닙니다."
-
-#: ../src/yelp-toc-pager.c:1698
-msgid "Command Line Help"
-msgstr "명령행 도움말"
-
-#: ../src/yelp-toc-pager.c:1816
+#: ../src/yelp-toc-pager.c:370 ../src/yelp-toc-pager.c:1943
 #, c-format
 msgid ""
 "The table of contents could not be processed. The file ‘%s’ is either "
@@ -587,6 +786,28 @@ msgid ""
 msgstr ""
 "차례를 처리할 수 없습니다. '%s' 파일이 없거나 올바른 XSLT 스타일시트가 아닙니"
 "다."
+
+#: ../src/yelp-toc-pager.c:1098
+#, c-format
+msgid "Read man page for %s"
+msgstr "%s에 관한 man 페이지를 읽습니다"
+
+#: ../src/yelp-toc-pager.c:1690
+#, c-format
+msgid "Read info page for %s"
+msgstr "%s에 관한 정보 페이지를 읽습니다"
+
+#: ../src/yelp-toc-pager.c:1803
+#, c-format
+msgid ""
+"The table of contents could not be loaded. The file ‘%s’ is either missing "
+"or is not well-formed XML."
+msgstr ""
+"차례를 읽어들일 수 없습니다. '%s' 파일이 없거나 올바른 형식의 XML이 아닙니다."
+
+#: ../src/yelp-toc-pager.c:1825
+msgid "Command Line Help"
+msgstr "명령행 도움말"
 
 #: ../src/yelp-window.c:319
 msgid "_File"
@@ -800,8 +1021,8 @@ msgstr ""
 "'%s' 파일에 필요한 변환 컨텍스트를 만들 수 없습니다. 이 형식을 지원하지 않을 "
 "것입니다."
 
-#: ../src/yelp-window.c:1556 ../src/yelp-window.c:1975
-#: ../src/yelp-window.c:2051
+#: ../src/yelp-window.c:1557 ../src/yelp-window.c:1976
+#: ../src/yelp-window.c:2059
 #, c-format
 msgid ""
 "The section ‘%s’ does not exist in this document. If you were directed to "
@@ -811,7 +1032,7 @@ msgstr ""
 "이 문서에는 '%s' 섹션이 없습니다. 프로그램의 도움말 단추를 통해 이 섹션에 들"
 "어왔다면, 프로그램의 관리자에게 알려 주십시오."
 
-#: ../src/yelp-window.c:1671 ../src/yelp-window.c:2454
+#: ../src/yelp-window.c:1672 ../src/yelp-window.c:2463
 #, c-format
 msgid ""
 "The file ‘%s’ could not be read.  This file might be missing, or you might "
@@ -819,11 +1040,11 @@ msgid ""
 msgstr ""
 "'%s' 파일을 읽을 수 없습니다.  파일이 없거나, 파일을 읽을 권한이 없습니다."
 
-#: ../src/yelp-window.c:1722
+#: ../src/yelp-window.c:1723
 msgid "Loading..."
 msgstr "읽고 있습니다..."
 
-#: ../src/yelp-window.c:2886
+#: ../src/yelp-window.c:2895
 #, c-format
 msgid ""
 "Could not display help for Yelp.\n"
@@ -834,15 +1055,15 @@ msgstr ""
 
 #. Note to translators: put here your name (and address) so it
 #. * will show up in the "about" box
-#: ../src/yelp-window.c:2917
+#: ../src/yelp-window.c:2926
 msgid "translator-credits"
 msgstr "차영호 <ganadist@gmail.com>"
 
-#: ../src/yelp-window.c:2920
+#: ../src/yelp-window.c:2929
 msgid "Yelp"
 msgstr "Yelp"
 
-#: ../src/yelp-window.c:2922
+#: ../src/yelp-window.c:2931
 msgid "A documentation browser and viewer for the Gnome Desktop."
 msgstr "그놈 데스크탑 문서 보기 프로그램."
 
@@ -865,6 +1086,15 @@ msgstr ""
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "그놈에서 도움말을 봅니다"
+
+#~ msgid "Library Functions"
+#~ msgstr "라이브러리 함수"
+
+#~ msgid "Administration"
+#~ msgstr "시스템 관리"
+
+#~ msgid "Other"
+#~ msgstr "기타"
 
 #~ msgid "Multimedia"
 #~ msgstr "멀티미디어"
@@ -1045,9 +1275,6 @@ msgstr "그놈에서 도움말을 봅니다"
 
 #~ msgid "Date"
 #~ msgstr "날짜"
-
-#~ msgid "Dedication"
-#~ msgstr "바치는 글"
 
 #~ msgid "Editor"
 #~ msgstr "편집"
