--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,11 +1,15 @@
+2006-07-21  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
+
+	* ca.po: Updated Catalan translation by Gil Forcada.
+
 2006-07-19  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
 
 2006-07-18  Guntupalli Karunakar  <karunakar@freedomink.org>
 
-        * dz.po: Updated Dzongkha translation by
-        Dzongkhalinux team, DIT
+	* dz.po: Updated Dzongkha translation by
+	Dzongkhalinux team, DIT
 
 2006-07-18  Hendrik Richter  <hendrikr@gnome.org>
 
